recursion.lessons.recursion.tree.Tree.scala.error
Tree:5: error: ';' expected but ',' found.
Pour dessiner un arbre à quatre étages, il faut dessiner un tronc de la taille indiquée
                                      ^